Bug 635010 - new Error(undefined).hasOwnProperty("message") should be false. r=jorendorff.